<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Volunteer Hero</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_charities_button">My Charities</string>
    <string name="my_calendar_button">My Calendar</string>
    <string name="find_local_events_button">Find Local Events</string>
    <string name="my_profile_button">My Profile</string>
    <string name="title_activity_my_charities">My Charities</string>
    <string name="title_activity_my_calendar">My Calendar</string>
    <string name="title_activity_find_local_events">Find Local Events</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_first_launch">Tell Us About Yourself</string>
    <string name="create_profile_button">Create Profile!</string>
    <string name="reset_profile_button">Reset</string>
    <string name="my_profile_first">First Name:</string>
    <string name="my_profile_last">Last Name:</string>
    <string name="my_profile_email">Email:</string>
    <string name="my_profile_street">Street Address:</string>
    <string name="my_profile_city">City:</string>
    <string name="my_profile_state">State:</string>
    <string name="my_profile_zip">ZIP Code:</string>
    <string name="my_profile_phone">Phone Number:</string>
    <string name="blank"></string>
    <string name="edit">Edit</string>
    <string name="profile_edit">Edit Profile Field</string>
    <string name="change">Update!</string>
    <string name="cancel">Cancel</string>
    <string name="new_value">New Value</string>
    <string name="ok">OK</string>
    <string name="unchanged">Field was not changed!</string>
    <string name="too_long">Value entered was too long.</string>
    <string name="bad_email">Email entered was invalid</string>
    <string name="bad_state">State code entered was invalid, please use 2 letter capitalized abbreviation.</string>
    <string name="bad_zip">ZIP code entered was invalid, please use XXXXX</string>
    <string name="bad_phone">Phone number entered was invalid, please use XXXXXXXXXX</string>
    <string name="database_url"></string>
    <string name="title_activity_event_description">Event Description</string>
    <string name="title_activity_first_use">Welcome!</string>
    <string name="title_activity_new_user">Tell Us About Yourself!</string>
    <string name="title_activity_recover_account">Recover Your Account</string>
    <string name="create_profile1_button">Create Profile</string>
    <string name="recover_account_button">Recover Account</string>
    <string name="intro_text">Welcome to VolunteerHero!\nIf you have previously created an account, select Recover Account. If you are a new user, select Create Profile.</string>
    <string name="email_hint">email</string>
    <string name="confirmation_code_hint">confirmation code</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="address_hint">address</string>
    <string name="city_hint">city</string>
    <string name="state_hint">state</string>
    <string name="zip_hint">zip</string>
    <string name="phone_hint">phone</string>
    <string name="recover_account_text">Please enter the email and confirmation code associated with the account you would like to recover.</string>
    <string name="warning_incomplete">Please fill out all fields.</string>
    <string name="invalid_title">Invalid Input</string>
    <string name="rsvp">RSVP!</string>
    <string name="warn_rsvp">You already RSVP\'d for this event.</string>
    <string name="title_activity_attend_event">Details</string>
    <string name="attend">Confirm Attendance!</string>
    <string name="confirm">Enter Confirmation Code:</string>
    <string name="hours"># of Hours:</string>
    <string name="bad_confirm">Confirmation code entered was invalid.</string>
    <string name="good_confirm">Confirmation Successful!</string>
    <string name="rsvp_thanks">Thank you for RSVP\'ing!</string>
    <string name="title_activity_charity_info">Charity Info</string>
    <string name="completed">Completed Reward Levels:</string>
    <string name="next">Next Reward Level:</string>

</resources>
