<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AttendEventActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView android:id="@+id/attend_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/blank" />
        <TextView android:id="@+id/attend_event_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank" />
        <EditText android:id="@+id/confirmation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm" />
        <EditText android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hours" />
        <Button android:id="@+id/attend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attend"
            android:onClick="attend" />
    </LinearLayout>

</ScrollView>
