<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyProfileActivity" >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView android:id="@+id/my_profile_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/my_profile_first" />
    <TextView android:id="@+id/my_profile_first_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_first"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_first"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="firstClick" />
    
    <TextView android:id="@+id/my_profile_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_first_button"
        android:textStyle="bold"
        android:text="@string/my_profile_last" />
    <TextView android:id="@+id/my_profile_last_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_last"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_last_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_last"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="lastClick" />
    
    <TextView android:id="@+id/my_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_last_button"
        android:textStyle="bold"
        android:text="@string/my_profile_email" />
    <TextView android:id="@+id/my_profile_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_email"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_email"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="emailClick" />
    
    <TextView android:id="@+id/my_profile_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_email_button"
        android:textStyle="bold"
        android:text="@string/my_profile_street" />
    <TextView android:id="@+id/my_profile_street_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_street"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_street_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_street"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="streetClick" />
    
    <TextView android:id="@+id/my_profile_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_street_button"
        android:textStyle="bold"
        android:text="@string/my_profile_city" />
    <TextView android:id="@+id/my_profile_city_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_city"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_city_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_city"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="cityClick" />
    
    <TextView android:id="@+id/my_profile_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_city_button"
        android:textStyle="bold"
        android:text="@string/my_profile_state" />
    <TextView android:id="@+id/my_profile_state_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_state"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_state_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_state"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="stateClick" />
    
    <TextView android:id="@+id/my_profile_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_state_button"
        android:textStyle="bold"
        android:text="@string/my_profile_zip" />
    <TextView android:id="@+id/my_profile_zip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_zip"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_zip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_zip"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="zipClick" />
    
    <TextView android:id="@+id/my_profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_zip_button"
        android:textStyle="bold"
        android:text="@string/my_profile_phone" />
    <TextView android:id="@+id/my_profile_phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_phone"
        android:text="@string/blank" />
    <Button android:id="@+id/my_profile_phone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_profile_phone"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:onClick="phoneClick" />
    
</RelativeLayout>
</ScrollView>
